# ContactDemo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
BarrierContact/: README.md  __init__.py  energies.py  integrators.py  mesh.py  run_demo.py  simple_simulator.py  simulator.py  visualize.py
BarrierContact/experiments/: falling_block.py  sliding_block.py
NewtonAnt/: README.md  ant_env.py  pyproject.toml  run_demo.py  run_eval.py  run_ppo.py  run_trajopt.py  torch_utils.py
NewtonAnt/assets/: ant.xml
NewtonAnt/checkpoints/: best.pt
PenaltyContact/: README.md  contact_model.py  experiment.py  penalty_cube_demo.py  simulation.py  theory.md
