[project]
name = "adaptive-time-stepping"
version = "0.1.0"
description = "Adaptive time-stepping for optimization-based physics simulation (IPC, 1D/2D)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Junpeng Chen" }]
keywords = ["physics simulation", "adaptive time stepping", "IPC", "contact", "FEM"]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]
vis = [
    "polyscope>=2.1",
    "trimesh>=4.0",
]
libuipc = [
    "pyuipc",   # requires CUDA 12.8, Python 3.10-3.13, Win/Ubuntu 22.04
]
mesh = [
    "triangle>=20230923",  # constrained Delaunay triangulation for from_polygon
]
sciml = [
    "diffeqpy>=1.3",  # Python wrapper for Julia DifferentialEquations.jl; requires Julia installed
]

[project.scripts]
run-benchmarks-1d = "adaptive_stepping_1d.run_benchmarks:main"
run-benchmarks-comprehensive = "adaptive_stepping_1d.run_comprehensive_benchmarks:main"
run-experiments-2d = "adaptive_stepping_2d.run_experiments:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["adaptive_stepping*", "adaptive_stepping_1d*", "adaptive_stepping_2d*"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["solid-sim-tutorial/", "mdbook-src/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function call in default arguments
]

[tool.ruff.format]
docstring-code-line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
